  * Add armhf, s390x architectures, comment hppa architecture.
  * Enable korean language.
  * Use base-system-size and task-desktop-lxde-inst instead of hardcoding
    install size in chroot method.
  * Advise to install ssh and set root passwd in chroot method, thanks Michael
    Stapelberg for the patch. Closes: #413649.
  * Remove PA-RISC architecture from documented supported list.

  [ Steve McIntyre ]
  * Make it clearer how we expect users to write CDs to USB sticks.
    Closes: #680650.

  [ Joey Hess ]
  * Fix typo in example preseed. Closes: #612631

  [ Didier Raboud ]
  * Document win32-loader as a possible boot method. Closes: #444017.

  [ Colin Watson ]
  * The text frontend is available on most default install media.  Adjust
    the Boot Parameters section to say so.
  * Update url-us-keymap.  Thanks, Manfred Hampl; LP: #741134.
  * Document log_host and log_port.
  * Update link to installer/doc/devel/ to cope with the switch to git.

  [ Christian Perrier ]
  * Document preseed-md5 and keymap preseed aliases
    Closes: #621825, #621824, #681801
  * Add VCS-Browser to debian/control. Closes: #636937

  [ Martin Michlmayr ]
  * Update list of supported ARM devices.

  [ Miguel Figueiredo ]
  * Fix chroot install keyboard configuration. Closes: #634168.

  [ Julian Andres Klode ]
  * Use C.UTF-8 locale for chroot install. Closes: #634167.

  [ Joey Hess ]
  * Remove dead link to Phoenix large disk BIOS faq. Closes: #638268
  * Add a pointer to the unofficial non-free CDs with firmware.
  * 1 gb USB key now needed for hd-media. Closes: #666090

  [ Vincent McIntyre ]
  * Mention DEBCONF_DEBUG. Closes: #668572.

  [ Milan Kupcevic ]
  * Clarify how to boot PowerMacs from external Firewire and internal
    factory default CD/DVD drives. Closes #378119.
  * Document how to boot Pegasos II from factory default CD/DVD drive.

  [ Nozomu Kurasawa ]
  * Fix xml file test. Closes: #684834.
