@@ -1113,6 +1113,7 @@ d-i partman-lvm/device_remove_lvm boolean true
 d-i partman-md/device_remove_md boolean true
 # I el mateix per la confirmació d'escriptura a particions lvm.
 d-i partman-lvm/confirm boolean true
+d-i partman-lvm/confirm_nooverwrite boolean true
 
 # Podeu triar un dels tres tipus de partició predefinits:
 # - atomic: tots els fitxers en una partició
