@@ -1153,6 +1153,7 @@ d-i partman-auto/method string lvm
 d-i partman-lvm/device_remove_lvm boolean true
 # To stejné platí pro potvrzení při zápisu LVM oblastí.
 d-i partman-lvm/confirm boolean true
+d-i partman-lvm/confirm_nooverwrite boolean true
 # A platí i pro odstranění pozůstatků předchozího softwarového RAIDu:
 d-i partman-md/device_remove_md boolean true
 
