@@ -1117,6 +1117,7 @@ d-i partman-lvm/device_remove_lvm boolean true
 d-i partman-md/device_remove_md boolean true
 # Ebenfalls für die Bestätigung, die LVM-Partitionen zu schreiben.
 d-i partman-lvm/confirm boolean true
+d-i partman-lvm/confirm_nooverwrite boolean true
 
 # Sie können eines der vordefinierten Partitionierungsrezepte wählen:
 # - atomic: alle Dateien in einer Partition
