@@ -1078,6 +1078,7 @@ d-i partman-lvm/device_remove_lvm boolean true
 d-i partman-md/device_remove_md boolean true
 # Et aussi pour la confirmation concernant la création de partitions lvm :
 d-i partman-lvm/confirm boolean true
+d-i partman-lvm/confirm_nooverwrite boolean true
 
 # Vous pouvez choisir l'un des trois schémas prédéfinis...
 # - atomic: tous les fichiers dans une seule partition
