@@ -1986,6 +1986,7 @@ d-i partman-md/device_remove_md boolean true
 --># E può essere preconfigurata anche la conferma alla scrittura delle
 # partizioni lvm.
 d-i partman-lvm/confirm boolean true
+d-i partman-lvm/confirm_nooverwrite boolean true
 
 <!--
 # You can choose from any of the predefined partitioning recipes:
