@@ -40,6 +40,7 @@ installation-guide (2011xxxx) UNRELEASED; urgency=low
   * Advise to install ssh and set root passwd in chroot method, thanks Michael
     Stapelberg for the patch. Closes: #413649.
   * Remove PA-RISC architecture from documented supported list.
+  * Add partman-lvm/confirm_nooverwrite to preseed example. Closes: #610282.
 
   [ Steve McIntyre ]
   * Make it clearer how we expect users to write CDs to USB sticks.
